force-app/main/default/objects/Dialpad__SMS_Log__c/Dialpad__SMS_Log__c.object-meta.xml
<CustomObject>
    <label>Dialpad SMS Log</label>
    <nameField>
        <displayFormat>DSL-{0000000000}</displayFormat>
        <label>SMS Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dialpad SMS Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>