force-app/main/default/objects/Dialpad__SMS_Log__c/fields/Dialpad__Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__Agent_Name__c</fullName>
    <label>Agent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>