force-app/main/default/objects/Dialpad__SMS_Log__c/fields/Dialpad__Message_Details__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__Message_Details__c</fullName>
    <label>Message Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>