force-app/main/default/objects/Dialpad__SMS_Log__c/fields/Dialpad__Message_Status__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__Message_Status__c</fullName>
    <label>Message Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>