force-app/main/default/objects/Dialpad__SMS_Log__c/fields/Dialpad__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__Object_Name__c</fullName>
    <label>Object Name</label>
    <type>TextArea</type>
</CustomField>