force-app/main/default/objects/Dialpad__SMS_Log__c/fields/Dialpad__Parent_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__Parent_Object_Id__c</fullName>
    <label>Parent Object Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>