force-app/main/default/objects/Dialpad__SMS_Log__c/fields/Dialpad__RelatedObjectIds__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__RelatedObjectIds__c</fullName>
    <label>RelatedObjectIds</label>
    <type>TextArea</type>
</CustomField>