force-app/main/default/objects/Dialpad__SMS_Log__c/listViews/Dialpad__All.listView-meta.xml
<ListView>
    <fullName>Dialpad__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>